# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos/ace/ace.gni")

js_declaration("camera_js") {
  part_name = "multimedia_camera_standard"
  sources = [ "./@ohos.multimedia.camera.d.ts" ]
}

ohos_copy("camera_declaration") {
  sources = [ "./@ohos.multimedia.camera.d.ts" ]
  outputs = [ target_out_dir + "/$target_name/" ]
  module_source_dir = target_out_dir + "/$target_name"
  module_install_name = ""
}

ohos_shared_library("camera_napi") {
  include_dirs = [
    "//foundation/multimedia/camera_standard/interfaces/kits/js/camera_napi/include",
    "//drivers/peripheral/camera/hal/hdi_impl/include/camera_device",
    "//drivers/peripheral/camera/hal/hdi_impl/include/camera_host",
    "//base/hiviewdfx/hilog/interfaces/native/innerkits/include/",
    "//drivers/peripheral/codec/interfaces/include",
    "//drivers/peripheral/display/interfaces/include",
    "//foundation/graphic/standard/frameworks/surface/include",
    "//foundation/graphic/standard/interfaces/kits/surface",
    "//foundation/graphic/standard/window_manager/include",
    "//foundation/multimedia/camera_standard/frameworks/innerkitsimpl/camera/include",
    "//utils/native/base/include",
    "//drivers/peripheral/camera/hal/include",
    "//foundation/multimedia/camera_standard/interfaces/innerkits/native/camera/include",
    "//foundation/multimedia/camera_standard/services/camera_service/include",
    "//base/hiviewdfx/hilog/interfaces/native/innerkits/include/hilog",
    "//drivers/framework/include/utils",
    "//drivers/adapter/uhdf2/osal/include",
    "//foundation/graphic/standard/frameworks/surface/include",
    "//drivers/adapter/uhdf2/include/hdi",
    "//drivers/peripheral/camera/hal/include",
    "//drivers/framework/include/utils/",
    "//drivers/adapter/uhdf2/osal/include/",
    "//drivers/adapter/uhdf2/include/hdi/",
    "//drivers/peripheral/camera/interfaces/include",
    "//drivers/peripheral/camera/interfaces/hdi_cpp/utils/include",
    "//drivers/peripheral/camera/interfaces/hdi_cpp/server/include",
    "//drivers/peripheral/camera/interfaces/hdi_cpp/callback/device/include",
    "//drivers/peripheral/camera/interfaces/hdi_cpp/callback/host/include",
    "//drivers/peripheral/camera/interfaces/hdi_cpp/callback/operator/include",
    "//drivers/peripheral/camera/hal/hdi_impl/include/camera_host/",
    "//drivers/peripheral/camera/hal/hdi_impl/include/stream_operator/",
    "//drivers/peripheral/camera/hal/device_manager/include/",
    "//drivers/peripheral/camera/hal/hdi_impl/include/camera_device/",
    "//drivers/peripheral/camera/hal/hdi_impl/include/",
    "//drivers/peripheral/camera/hal/hdi_impl/include/offline_stream_operator/",
    "//drivers/peripheral/camera/hal/include/",
    "//drivers/peripheral/camera/hal/pipeline_core/include/",
    "//drivers/peripheral/camera/hal/pipeline_core/utils/",
    "//drivers/peripheral/camera/hal/pipeline_core/pipeline_impl/include/",
    "//drivers/peripheral/camera/hal/pipeline_core/host_stream/include/",
    "//drivers/peripheral/camera/hal/pipeline_core/ipp/include/",
    "//foundation/multimedia/camera_standard/services/camera_service/include",
    "//foundation/multimedia/camera_standard/frameworks/innerkitsimpl/camera/include",
    "//foundation/graphic/standard/frameworks/surface/include",
    "//foundation/multimedia/camera_standard/services/camera_service/binder/base/include/",
    "//foundation/multimedia/camera_standard/services/camera_service/binder/base/include",
    "//foundation/multimedia/camera_standard/services/camera_service/binder/client/include",
    "//foundation/multimedia/camera_standard/services/camera_service/binder/server/include",
    "//drivers/peripheral/display/interfaces/include",
    "//drivers/peripheral/codec/interfaces/include",
    "//foundation/multimedia/media_standard/interfaces/innerkits/native/media/include",
    "//foundation/multimedia/camera_standard/frameworks/innerkitsimpl/metadata/include",
  ]
  sources = [ "//foundation/multimedia/camera_standard/frameworks/kitsimpl/camera_napi/src/camera_napi.cpp" ]
  deps = [
    "//drivers/peripheral/camera/hal:camera_hal",
    "//drivers/peripheral/camera/hal/device_manager:camera_device_manager",
    "//drivers/peripheral/camera/hal/hdi_impl:camera_hdi_impl",
    "//drivers/peripheral/camera/interfaces/hdi_cpp/client:libcamera_client",
    "//foundation/ace/napi:ace_napi",
    "//foundation/graphic/standard:libwms_client",
    "//foundation/graphic/standard/frameworks/surface:surface",
    "//foundation/multimedia/camera_standard/frameworks/innerkitsimpl/camera:camera_framework",
    "//foundation/multimedia/camera_standard/frameworks/innerkitsimpl/metadata:metadata",
    "//foundation/multimedia/camera_standard/services/camera_service:camera_service",
    "//utils/native/base:utils",
  ]
  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "multimedia_media_standard:media_client",
  ]
  relative_install_dir = "module/multimedia"
  part_name = "multimedia_camera_standard"
  subsystem_name = "multimedia"
}
