# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

module_output_path = "camera_standard/camera_framework"

ohos_unittest("camera_framework_unittest") {
  module_out_path = module_output_path
  include_dirs = [
    "./include",
    "//foundation/multimedia/camera_standard/services/camera_service/include",
    "//foundation/multimedia/camera_standard/services/camera_service/binder/base/include",
    "//foundation/multimedia/camera_standard/services/camera_service/binder/client/include",
    "//foundation/multimedia/camera_standard/services/camera_service/binder/server/include",
    "//foundation/multimedia/camera_standard/frameworks/innerkitsimpl/metadata/include",
    "//foundation/multimedia/camera_standard/interfaces/innerkits/native/camera/include",
    "//foundation/multimedia/camera_standard/interfaces/innerkits/native/test",
    "//foundation/graphic/standard/frameworks/surface/include",
    "//utils/system/safwk/native/include",
    "//drivers/framework/include/utils",
    "//drivers/adapter/uhdf2/osal/include",
    "//drivers/adapter/uhdf2/include/hdi",
    "//drivers/peripheral/display/interfaces/include",
    "//drivers/peripheral/camera/interfaces/include",
    "//drivers/peripheral/camera/interfaces/hdi_ipc",
    "//drivers/peripheral/camera/interfaces/hdi_ipc/server",
    "//drivers/peripheral/camera/interfaces/hdi_ipc/callback/device",
    "//drivers/peripheral/camera/interfaces/hdi_ipc/callback/operator",
    "//drivers/peripheral/camera/interfaces/hdi_ipc/callback/host",
    "//drivers/peripheral/camera/hal/device_manager/include",
    "//drivers/peripheral/camera/hal/include",
    "//drivers/peripheral/camera/hal/hdi_impl/include",
    "//drivers/peripheral/camera/hal/hdi_impl/include/camera_host",
    "//drivers/peripheral/camera/hal/hdi_impl/include/camera_device",
    "//drivers/peripheral/camera/hal/hdi_impl/include/stream_operator",
    "//drivers/peripheral/camera/hal/hdi_impl/include/offline_stream_operator",
    "//drivers/peripheral/camera/hal/pipeline_core/utils",
    "//drivers/peripheral/camera/hal/pipeline_core/include",
    "//drivers/peripheral/camera/hal/pipeline_core/pipeline_impl/include",
    "//drivers/peripheral/camera/hal/pipeline_core/host_stream/include",
    "//drivers/peripheral/camera/hal/pipeline_core/ipp/include",
  ]

  sources = [
    "//foundation/multimedia/camera_standard/interfaces/innerkits/native/test/test_common.cpp",
    "src/camera_framework_test.cpp",
  ]

  deps = [
    "//foundation/graphic/standard:libsurface",
    "//foundation/multimedia/camera_standard/frameworks/innerkitsimpl/camera:camera_framework",
    "//foundation/multimedia/camera_standard/frameworks/innerkitsimpl/metadata:metadata",
    "//foundation/multimedia/camera_standard/services/camera_service:camera_service",
  ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "multimedia_media_standard:media_client",
  ]
}
