# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

module_output_path = "camera_standard/camera_framework_unittest"

ohos_unittest("camera_framework_unittest") {
  module_out_path = module_output_path
  include_dirs = [
    "./include",
    "//drivers/adapter/uhdf2/osal/include",
    "//drivers/adapter/uhdf2/include/hdi",
    "//drivers/framework/include/utils",
    "//foundation/graphic/graphic/frameworks/surface/include",
    "//foundation/multimedia/camera_standard/services/camera_service/include",
    "//foundation/multimedia/camera_standard/services/camera_service/binder/base/include",
    "//foundation/multimedia/camera_standard/services/camera_service/binder/client/include",
    "//foundation/multimedia/camera_standard/services/camera_service/binder/server/include",
    "//drivers/peripheral/camera/interfaces/metadata/include",
    "//foundation/multimedia/camera_standard/interfaces/inner_api/native/camera/include",
    "//foundation/multimedia/camera_standard/interfaces/inner_api/native/test",
    "//base/security/access_token/interfaces/innerkits/accesstoken/include",
    "//base/security/access_token/interfaces/innerkits/token_setproc/include",
  ]

  sources = [
    "//foundation/multimedia/camera_standard/interfaces/inner_api/native/test/test_common.cpp",
    "src/camera_framework_unittest.cpp",
  ]

  deps = [
    "//drivers/adapter/uhdf2/hdi:libhdi",
    "//drivers/peripheral/camera/interfaces/metadata:metadata",
    "//foundation/graphic/graphic:libsurface",
    "//foundation/multimedia/camera_standard/frameworks/native/camera:camera_framework",
    "//foundation/multimedia/camera_standard/services/camera_service:camera_service",
    "//third_party/googletest:gmock_main",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libtoken_setproc",
    "hisysevent_native:libhisysevent",
    "hitrace_native:hitrace_meter",
    "hiviewdfx_hilog_native:libhilog",
    "safwk:system_ability_fwk",
  ]

  cflags = [ "-fPIC" ]

  include_dirs += [
    "//drivers/peripheral/camera/interfaces/include",
    "//drivers/peripheral/camera/interfaces/hdi_ipc",
    "//drivers/peripheral/camera/interfaces/hdi_ipc/server",
    "//drivers/peripheral/camera/interfaces/hdi_ipc/callback/device/include",
    "//drivers/peripheral/camera/interfaces/hdi_ipc/callback/operator/include",
    "//drivers/peripheral/camera/interfaces/hdi_ipc/callback/host/include",
  ]

  if ("${product_name}" == "m40") {
    cflags += [ "-DPRODUCT_M40" ]
  } else {
    if (device_name == "rk3566" || device_name == "rk3568") {
      cflags += [ "-DRK_CAMERA" ]
    }
  }
  cflags_cc = cflags
}
